WildcardX: Bots appearance like face, hair, etc is now persisted to the database and used during runtime.
WildcardX: (Taurinus) Tweaked the way bots calculate their AA's so the code isn't as long and is easier to read.
WildcardX: A bot getting aggro will aggro its group members for them to come to the bots defense.

==08/04/2009==
WildcardX: Fixed a bug that broke cash handins with NPC's.
WildcardX: Fixed a bug that reversed a riposte attack's target.
WildcardX: Merged the "bots" branch into trunk and removed the prior "EQBOTS" system from trunk. Please carefully evaluate this version before making any decision to upgrade your servers.
Trevius: Added a Distance option for quest::follow(entity_id, distance) to allow setting the distance for the NPC to follow at.

==08/02/2009==
realityincarnate: SoF - Added opcode values to avoid packet dumps of some of the more annoying unknowns
realityincarnate: SoF - Tradeskill success messages now display the recipe name instead of %1
realityincarnate: Added #myskills command to bring up an SoF-style skills window showing current and capped skill levels
realityincarnate: Skills can no longer pass the cap from initial training (specifically bard meditate)

==7/31/2009==
WildcardX: Implemented a method to calculate the reciprocal heading of a specified mob object.

==7/30/2009==
Trevius: Added heading option and bool option for saving guard spot to quest::moveto(x,y,z,[h,saveguardspot?]).
Trevius: Added rule MaxClientsSetByStatus. If True, IP Limiting will be set to the status on the account as long as the status is > MaxClientsPerIP.

==7/29/2009==
AndMetal: Small fix to quest::scribespells() to return the correct amount of scribed spells.
AndMetal: #setaapoints/#setaapts will now consistently add the correct amount of AA points. Also added a rule AA:ExpPerPoint(23976503).
AndMetal: Added a little bit of logging for exp (CLIENT__EXP). Disabled by default.

Optional SQL: utils/sql/svn/853_optional_rule_aaexp.sql

==7/27/2009==